@@ -13,6 +13,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+org.apache.tika.parser.dgn.DGN8Parser
 org.apache.tika.parser.dwg.DWGParser
 org.apache.tika.parser.prt.PRTParser
 
